# Market-Making-RL-Agent

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  strategy_comparison.csv  test_metrics.csv
.github/workflows/: ci.yml
analysis/: plot_metrics.py
api/: main.py
cli/: index.html
configs/: inventory.yaml
configuration/: index.html
data/: grid_search_results.csv  index.html  inventory_mm_run.csv  mmrl.duckdb
deployment/: index.html
docs/: cli.md  configuration.md  data.md  deployment.md  extending.md  getting_started.md  http_api.md  index.md  performance_metrics.md  programmatic.md  reporting.md  workflows.md
examples/: benchmark_agents.py  benchmarks_curated.py  performance_analysis.py  replay_quickstart.py
experiments/: grid_search_inventory_mm.py  run_inventory_mm.py
extending/: index.html
getting_started/: index.html
grafana/: dashboard.json
http_api/: index.html
mlruns/0/: meta.yaml
mlruns/730407694671393822/: meta.yaml
mmrl/: cli.py
mmrl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
notebooks/: Grid_Heatmaps.ipynb  MultiAsset_Replay.ipynb  Quickstart.ipynb  RL_vs_RuleBased.ipynb
performance_metrics/: index.html
programmatic/: index.html
reporting/: index.html
results/: benchmarks_curated.csv
scripts/: demo_commands.sh  make_demo_gif.py
search/: search_index.json
tests/: conftest.py
utils/: metrics.py
workflows/: index.html
(+57 files in other folders)
